objects/GenAIContentCategory__dlm.object
<CustomObject>
    <fields>
        <fullName>KQ_id__c</fullName>
        <label>Key Qualifier Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_parent__c</fullName>
        <label>Key Qualifier Parent</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>category__c</fullName>
        <label>Category</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloud__c</fullName>
        <label>Cloud</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>detectorType__c</fullName>
        <label>Detector Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>orgId__c</fullName>
        <label>Org Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parent__c</fullName>
        <label>Parent</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rel_1753303672423_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GenAIContentCategory_parent_map_GenA_rel</label>
        <referenceTo>GenAIContentQuality__dlm</referenceTo>
        <relationshipLabel>GenAIContentCategory_parent_map_GenA_rel</relationshipLabel>
        <relationshipName>rel_1753303672423_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>value__c</fullName>
        <label>Value</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>